syntax = "proto3";

option go_package = "proto/accomodationGrpc";

service AccomodationService {
  rpc Create(CreateAccomodationRequest) returns (CreateAccomodationResponse) {}
}


//Requests
message CreateAccomodationRequest {
  string name = 1;
  string street = 2;
  string streetNumber = 3;
  string city = 4;
  string zipCode = 5;
  string country = 6;
  bool wifi = 7;
  bool kitchen = 8;
  bool airConditioner = 9;
  bool freeParking = 10;
  int32 minGuests = 11;
  int32 maxGuests = 12;
  bytes picture = 13;
}

//Responses
message CreateAccomodationResponse {
  string id = 14;
  string name = 1;
  string street = 2;
  string streetNumber = 3;
  string city = 4;
  string zipCode = 5;
  string country = 6;
  bool wifi = 7;
  bool kitchen = 8;
  bool airConditioner = 9;
  bool freeParking = 10;
  int32 minGuests = 11;
  int32 maxGuests = 12;
  repeated bytes pictures = 13;
}